--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vue-icons/feather": "^1.0.19",
     "open-props": "^1.3.16",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
